--- a/data/graphics/animations/blast/config.json
+++ b/data/graphics/animations/blast/config.json
@@ -1,1 +1,1 @@
-{"frames": [5, 5, 5], "loop": false, "speed": 1, "scale": 3, "centered": false, "flip": false}
+{"frames": [5, 5, 5], "loop": false, "speed": 1, "scale": 3, "centered": true, "flip": false}
